<BadgeSelect/> - fix word wrapping and eyes issues (#2397)
This PR fixes an issue when an item text contained more than 2 words,
the text would break.

Also, this PR fix the eyes tests. Since the DropdownLayout of the
BadgeSelect is centered, it overflowed the AutoExample container, thus
cutted off the screen in the eyes tests. This PR fixed that by centering
the BadgeSelect.

---

- [ ] Change is tested
- [ ] Change is documented
- [ ] Build is green
- [ ] Change of UX is approved by [wuwa](https://github.com/wuwa) or [milkyfruit](https://github.com/milkyfruit)

### Thanks for contributing :)

--- a/src/BadgeSelect/BadgeSelect.scss
+++ b/src/BadgeSelect/BadgeSelect.scss
@@ -10,6 +10,12 @@
   left: 50%;
   transform: translateX(-50%);
 
+  width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+  width: -moz-max-content;    /* Firefox/Gecko */
+  width: -webkit-max-content; /* Chrome */
+  width: max-content;
+
+  max-width: 300px;
   border-radius: 8px;
   box-shadow: $Shadow30;
   overflow: auto;
